css/style.css
/* ... */
/* Header */
	@-moz-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-webkit-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-o-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-ms-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }

	#header.styleED {
		color: var(--color-car-ed-dark);
	}

	#header.styleCD {
		color: var(--color-car-cd-dark);
	}

	#header {
		background: var(--color-light-background);
		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
		cursor: default;
		font-size: 0.8em;
		left: 0;
		padding: 1em 1.5em;
		position: fixed;
		top: 0;
		width: 100%;
		z-index: 10000;
	}

		#header h1 {
			font-weight: 900;
			margin: 0;
		}

			#header h1 span {
				font-weight: 300;
			}

		#header nav {
			letter-spacing: 0.075em;
			position: absolute;
			right: 1.5em;
			text-transform: uppercase;
			font-weight: bold;
			top: 0.75em;
		}

			#header nav ul li {
				display: inline-block;
				margin-left: 1.5em;
			}

				#header nav ul li > ul {
					display: none;
				}

				#header nav ul li a {
					border: solid 1px transparent;
					color: inherit;
					display: inline-block;
					line-height: 1em;
					padding: 0.6em 0.75em;
					text-decoration: none;
				}

				#header nav ul li input[type="button"],
				#header nav ul li input[type="submit"],
				#header nav ul li input[type="reset"],
				#header nav ul li .button {
					font-size: 1em;
					min-width: 0;
					width: auto;
				}

				#header nav ul li.submenu > a:before {
					-moz-osx-font-smoothing: grayscale;
					-webkit-font-smoothing: antialiased;
					font-family: FontAwesome;
					font-style: normal;
					font-weight: normal;
					text-transform: none !important;
				}

				#header nav ul li.submenu > a:before {
					content: '\f107';
					margin-right: 0.65em;
				}

				#header nav ul li.active > a, #header nav ul li:hover > a {
					-moz-transition: all 0.2s ease-in-out;
					-webkit-transition: all 0.2s ease-in-out;
					-o-transition: all 0.2s ease-in-out;
					-ms-transition: all 0.2s ease-in-out;
					transition: all 0.2s ease-in-out;
					background: rgba(188, 202, 206, 0.15);
				}

				#header nav .cc-active {
					font-weight: 900;
				}

		#header.reveal {
			-moz-animation: reveal-header 0.5s;
			-webkit-animation: reveal-header 0.5s;
			-o-animation: reveal-header 0.5s;
			-ms-animation: reveal-header 0.5s;
			animation: reveal-header 0.5s;
		}

		#header.alt {
			-moz-animation: none;
			-webkit-animation: none;
			-o-animation: none;
			-ms-animation: none;
			animation: none;
            background: transparent;
            box-shadow: none;
			color: white;
			padding: 2em 2.5em;
			position: absolute;
		}

			#header.alt nav {
				right: 2.5em;
				top: 1.75em;
			}

				#header.alt nav ul li.active > a, #header.alt nav ul li:hover > a {
					border: solid 1px;
				}

/* Blog */

/* Posts */
	.post-next {
	    float: right;
	    margin-right: 3em;
	}

	.post-prev {
	    float: left;
	    margin-left: 3em;
	}

/* Dropotron */
/* The dropdown menu in page header */

	.dropotron {
		background: white;
		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
		line-height: 2.25em;
		min-width: 13em;
		padding: 1em 0;
		text-transform: uppercase;
		margin-top: calc(-1em + 1px);
	}

		.dropotron.level-0 {
			font-size: 0.7em;
			font-weight: 400;
			margin-top: 1.5em;
		}

			.dropotron.level-0:before {
				border-bottom: solid 0.5em white;
				border-left: solid 0.5em transparent;
				border-right: solid 0.5em transparent;
				content: '';
				left: 0.75em;
				position: absolute;
				top: -0.45em;
			}

		.dropotron > li {
			border-top: solid 1px rgba(124, 128, 129, 0.2);
		}

			.dropotron > li > a {
				-moz-transition: none;
				-webkit-transition: none;
				-o-transition: none;
				-ms-transition: none;
				transition: none;
				color: inherit;
				text-decoration: none;
				padding: 0 1em;
				border: 0;
			}

			.dropotron > li:hover > a {
				background: var(--color-dark-background);
				color: white;
			}

			.dropotron > li:first-child {
				border-top: 0;
			}

/* Banner */
	@-moz-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
	@-webkit-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
	@-o-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
	@-ms-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
	@keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }

	#banner {
		background-attachment: scroll, scroll, scroll, fixed;
		background-image: url("images/ll.svg"), url("images/ll.svg"), url("images/overlay.png"), url("../images/banner.jpg");
		background-position: bottom left, bottom right, top left, top center;
		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
		background-size: 25em, 25em, auto, cover;
		color: white;
		cursor: default;
		padding: 6em 0;
		text-align: center;
	}
		#banner .inner {
			-moz-animation: reveal-banner 1s 0.25s ease-in-out;
			-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
			-o-animation: reveal-banner 1s 0.25s ease-in-out;
			-ms-animation: reveal-banner 1s 0.25s ease-in-out;
			animation: reveal-banner 1s 0.25s ease-in-out;
			-moz-animation-fill-mode: forwards;
			-webkit-animation-fill-mode: forwards;
			-o-animation-fill-mode: forwards;
			-ms-animation-fill-mode: forwards;
			animation-fill-mode: forwards;
			color: white;
			display: inline-block;
			opacity: 0;  /* not visible before fade-in */
			padding: 3em;
			text-align: center;
		}

			#banner .inner header {
				margin: 0 0 2em 0;
				padding: 3px 0 3px 0;
			}

				#banner .inner header h2 {
					border-bottom: solid 2px;
					border-top: solid 2px;
					font-size: 2.5em;
					font-weight: 900;
					letter-spacing: 0.2em;
					margin: 0;
					padding-left: 0.05em;
					position: relative;
					text-transform: uppercase;
				}
/* ... */

